# leapfrogai-backend-whisper

./: .gitattributes  .gitignore  CODEOWNERS  Dockerfile  Dockerfile.gpu  Makefile  README.md  get_model.py  main.py  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt  zarf-config.yaml  zarf.yaml
.github/workflows/: dev-docker-build-push.yaml  docker-publish.yaml  e2e.yaml  release-docker-build-push.yaml  release.yaml
scripts/: load_cuda.py
src/: get_model.py
tests/e2e/: README.md  test_main.py
