[project]
name = "leapfrogai-backend-whisper"
version = "0.5.0"

description = "Whisper backend for LeapfrogAI"
authors = [{ name = "LeapfrogAI Authors", email = "ai@defenseunicorns.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11.4, <3.12"
dependencies = [
    "leapfrogai == 0.4.0",
    "openai-whisper == 20230918",
    "ffmpeg == 1.4",
    "faster-whisper == 0.10.0",
    "ctranslate2 == 3.22.0",
    "transformers == 4.35.2",
]

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "black", "isort"]

[tool.pip-tools]
generate-hashes = true
