[project]
name = "leapfrogai-backend-whisper"
version = "0.4.0"

description = "Whisper backend for LeapfrogAI"
authors = [{ name = "LeapfrogAI Authors", email = "ai@defenseunicorns.com" }]
license = { file = "LICENSE" }
dependencies = [
    "leapfrogai == 0.4.0",
    "openai-whisper == 20231117",
    "ffmpeg == 1.4",
    "faster-whisper == 0.10.0",
    "ctranslate2 == 3.22.0",
    "jinja2==3.1.3",
    "transformers == 4.37.2",
]
requires-python = ">=3.11.4, <3.12"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pytest",
    "black",
    "isort",
    "nvidia-cublas-cu11",
    "nvidia-cuda-runtime-cu11",
]
gpu = ["nvidia-cublas-cu11", "nvidia-cuda-runtime-cu11"]

[tool.pip-tools]
generate-hashes = true
