[project]
name = "leapfrogai-backend-whisper"
version = "0.5.0"

description = "Whisper backend for LeapfrogAI"
authors = [{ name = "LeapfrogAI Authors", email = "ai@defenseunicorns.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "== 3.11.6"
dependencies = [
    "leapfrogai == 0.4.0",
    "openai-whisper == 20231117",
    "ffmpeg == 1.4",
    "faster-whisper == 0.10.0",
    "ctranslate2 == 3.22.0",
    "jinja2==3.1.3",
    "transformers == 4.37.2",
]

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "black", "isort", "openai"]

[tool.pip-tools]
generate-hashes = true
